--- a/web/themes/custom/hm-public-theme/static/sass/views/_biographies.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/views/_biographies.scss
@@ -147,7 +147,7 @@
 #makercategorynavigation {
   margin-right: 3%;
   margin-top: em(60);
-  padding: 0 em(15);
+  padding: 0 em(15) 0 0;
 
   //Maker Category Navigation
   .menu {
